[tool.poetry]
name = "pubmed-research-fetcher"
version = "0.1.0"
description = "A CLI tool to fetch and filter PubMed research papers."
authors = ["Devalla Anil Kumar"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]  # Ensures Poetry recognizes the `src` directory"

[tool.poetry.dependencies]
python = ">=3.9"
requests = ">=2.32.3,<3.0.0"
biopython = ">=1.85,<2.0"
pandas = ">=2.2.3,<3.0.0"
typer = ">=0.15.1,<0.16.0"

[tool.poetry.scripts]
get-papers-list = "src.cli:app"  # Registers CLI command

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

